--- a/Projet_Final_IW2/CSS/Style.css
+++ b/Projet_Final_IW2/CSS/Style.css
@@ -269,3 +269,9 @@ header .overlay {
         font-size: 12px;
     }
 }
+
+@media screen and (min-width: 576px) and (max-width: 1199px) {
+    .ipad{
+        font-size: 50px;
+    }
+}
