--- a/MassothérapieSM/css/Style.css
+++ b/MassothérapieSM/css/Style.css
@@ -644,7 +644,7 @@ textarea.input100 {
        7.FOOTER css
 ===========================*/
 .footer-area {
-    background-color: #f4f6f7; }
+    background-color: #e0c3af; }
 
 .footer-widget {
     padding-top: 90px;
@@ -689,28 +689,22 @@ textarea.input100 {
         margin-left: 0; } }
 
 .footer-title {
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 700;
-    line-height: 18px;
-    color: #6c6c6c; }
+    line-height: 100px;
+    color: #ffffff;
+    position: relative;
+    right: 20%;
+    left: 50%;
+}
 
 .footer-link {
-    margin-top: 32px; }
-.footer-link ul {
-    margin-top: 8px; }
-.footer-link ul li a {
-    font-size: 16px;
-    line-height: 24px;
-    color: #121212;
-    margin-top: 16px;
-    font-weight: 500;
-    -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s; }
-.footer-link ul li a:hover {
-    color: #0067f4; }
+    margin-top: 30px;
+    position: relative;
+
+}
+
+
 
 .footer-newsletter {
     margin-top: 32px; }
@@ -727,16 +721,13 @@ textarea.input100 {
     font-weight: 500; }
 .footer-newsletter .newsletter input::placeholder {
     opacity: 1;
-    color: #6c6c6c; }
+    color: #ffffff; }
 .footer-newsletter .newsletter input::-moz-placeholder {
     opacity: 1;
-    color: #6c6c6c; }
-.footer-newsletter .newsletter input::-moz-placeholder {
-    opacity: 1;
-    color: #6c6c6c; }
+    color: #ffffff; }
 .footer-newsletter .newsletter input::-webkit-input-placeholder {
     opacity: 1;
-    color: #6c6c6c; }
+    color: #ffffff; }
 .footer-newsletter .newsletter button {
     position: absolute;
     top: 0;
@@ -754,7 +745,7 @@ textarea.input100 {
     margin-top: 16px; }
 
 .footer-copyright {
-    background-color: #2b354f; }
+    background-color: #5b7163; }
 
 .copyright {
     padding: 23px 0; }
