--- a/MassothérapieSM/css/Style.css
+++ b/MassothérapieSM/css/Style.css
@@ -50,8 +50,7 @@ a {
 
 }
 
-} //
-.tiles-a
+}
 
 #aside {
     position: fixed;
@@ -133,18 +132,7 @@ img {
     padding-top: 100px;
     padding-bottom: 100px;
 }
-#soins {
-    margin: 1rem 0;
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-gap: 1rem;
-    -moz-column-gap: 1rem;
-    column-gap: 1rem;
-    -webkit-column-width: 33.33333333333333%;
-    -moz-column-width: 33.33333333333333%;
-    column-width: 33.33333333333333%;
-}
+
 .tile img {
     max-width: 100%;
     width: 100%;
@@ -646,66 +634,21 @@ textarea.input100 {
 .footer-area {
     background-color: #e0c3af; }
 
-.footer-widget {
-    padding-top: 90px;
-    padding-bottom: 120px; }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .footer-widget {
-        padding-top: 70px;
-        padding-bottom: 100px; } }
-@media (max-width: 767px) {
-    .footer-widget {
-        padding-top: 50px;
-        padding-bottom: 80px; } }
-
-.footer-logo-support .footer-logo .social {
-    margin-left: 35px; }
-.footer-logo-support .footer-logo .social li {
-    display: inline-block;
-    margin-right: 10px; }
-.footer-logo-support .footer-logo .social li a {
-    font-size: 24px;
-    color: #6c6c6c;
-    -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s; }
-.footer-logo-support .footer-logo .social li a:hover {
-    color: #0067f4; }
-
-.footer-logo-support .footer-support span {
-    font-size: 20px;
-    line-height: 25px;
-    color: #6c6c6c;
-    font-weight: 600; }
-@media (max-width: 767px) {
-    .footer-logo-support .footer-support span {
-        display: block; } }
-.footer-logo-support .footer-support span.mail {
-    margin-left: 32px; }
-@media (max-width: 767px) {
-    .footer-logo-support .footer-support span.mail {
-        margin-left: 0; } }
-
 .footer-title {
     font-size: 20px;
     font-weight: 700;
     line-height: 100px;
     color: #ffffff;
     position: relative;
-    right: 20%;
     left: 50%;
+    border-radius: 50px;
+    padding: 0 24px;
+    border: 0;
 }
-
 .footer-link {
     margin-top: 30px;
     position: relative;
-
 }
-
-
-
 .footer-newsletter {
     margin-top: 32px; }
 .footer-newsletter .newsletter {
