--- a/MassothérapieSM/css/Style.css
+++ b/MassothérapieSM/css/Style.css
@@ -639,7 +639,16 @@ textarea.input100 {
     font-weight: 700;
     line-height: 100px;
     color: #ffffff;
-    position: relative;
+    left: 50%;
+    border-radius: 50px;
+    padding: 0 24px;
+    border: 0;
+}
+.footer-h6 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 100px;
+    color: #ffffff;
     left: 50%;
     border-radius: 50px;
     padding: 0 24px;
@@ -649,8 +658,13 @@ textarea.input100 {
     margin-top: 30px;
     position: relative;
 }
+
+
+
+
+
 .footer-newsletter {
-    margin-top: 32px; }
+    margin-top: 30px; }
 .footer-newsletter .newsletter {
     margin-top: 24px;
     position: relative; }
@@ -684,8 +698,19 @@ textarea.input100 {
     color: #121212;
     cursor: pointer;
     background: none; }
+
+
 .footer-newsletter .text {
     margin-top: 16px; }
+
+
+
+
+
+
+
+
+
 
 .footer-copyright {
     background-color: #5b7163; }
