--- a/MassothérapieSM/css/Style.css
+++ b/MassothérapieSM/css/Style.css
@@ -1,3 +1,5 @@
+
+html,body {margin:0; height:100%;}
 /*//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 [ Accueil ]*/
 .paddingZoneaccueil{
@@ -31,90 +33,20 @@
 
 /***********************************[ Responsive ]*********************************************************/
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-
-    .pricing-area {
-        padding-top: 100px;
-        padding-bottom: 100px;
-        margin-top: 50px;} }
-
-@media (max-width: 767px) {
-    .pricing-area {
-        padding-top: 80px;
-        padding-bottom: 80px;
-        margin-top: 50px;} }
-
-
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-    .single-pricing .pricing-header .price {
-        font-size: 50px;
-        margin-top: 16px;
-        margin-bottom: 16px;} }
-
-@media (max-width: 767px) {
-    .single-pricing .pricing-header .price {
-        font-size: 50px;
-        margin-top: 16px;
-        margin-bottom: 16px;} }
-
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .single-pricing .pricing-header .price {
-        font-size: 64px;
-        margin-top: 32px;
-        margin-bottom: 16px;} }
-
-
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-    .single-pricing.enterprise .pricing-flower {
-        width: 110px;
-        margin-bottom: 16px;
-        margin-top: 50px;} }
-
-@media (max-width: 767px) {
-    .single-pricing.enterprise .pricing-flower {
-        width: 110px;
-        margin-bottom: 16px;
-        margin-top: 50px;} }
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .single-pricing.enterprise .pricing-flower {
-        width: 144px;
-        margin-bottom: 16px;
-        margin-top: 50px;} }
-
-
 
 
 @media (max-width: 992px) {
     .imgAccueil {
+        background-image: url(../img/back.jpg);
         filter: blur(3px);
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        position: relative;
-        width: 100%;
-
 
     }
-
 }
 
-@media (max-width: 768px) {
-    margin-top: 50px;
-}
-
-@media (max-width: 576px) {
-    margin-top: 50px;
-}
-
-.text-soin {
-    background-color: #5b7163;
-    color: white;
-    font-size: 16px;
-    padding: 16px 32px;
-}
 
 /*//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 [ À propos ]*/
@@ -1047,9 +979,9 @@ textarea.input100 {
         padding-left: 40px;
     }
 }
-/*===========================
-       le bouton
-===========================*/
+/*===============================================================================================================================
+                                                       le bouton
+===============================================================================================================================*/
 
 
 .back-to-top {
